--- a/hotel/src/server/package.json
+++ b/hotel/src/server/package.json
@@ -13,8 +13,10 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.10.0"
+    "mysql2": "^3.10.0",
+    "nodemailer": "^6.9.16"
   }
 }
